# servidor_msg

./: .gitignore  App.ui  Log.ui  README.md  cliente.ui  pyproject.toml
NoGUI/: cliente.py  servidor.py
servidor_messenger/: App.py  cliente.py  clienteui.py  log.py  main.py  servidor.py
tests/: cliente.py  servidor.py  teste.py
