[tool.poetry]
name = "servidor-messenger"
version = "0.1.0"
description = ""
authors = ["Thales H. Nascimento <thales_henrique_n@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "^6.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
